--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e03ab1b6-bb4e-4a34-95de-57599e23ecf3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
